Revision history for OX

{{$NEXT}}

0.13  2013-08-14
      - fix inadvertent test dep (Caleb Cushing, #14)

0.12  2013-08-07
      - allow specifying lifecycles for middleware declared with the 'wrap'
        keyword. this should allow you to create middleware which depend on
        other services, and yet don't need to be recreated on every request (by
        making them Singletons). (Thomas Klausner, #10, #13)
      - fix OX classes inheriting from Bread::Board::Declare classes (Caleb
        Cushing, #12)

0.11  2013-05-02
      - fix a couple memory leaks in the Bread::Board parts. (danielr)
      - proper error return for errors looking up action methods in
        ControllerAction and HTTPMethod route builders. (danielr)
      - properly decode path args (reported by Clay Fouts)

0.10  2013-01-09
      - bump Path::Router dep to make sure we have all of the features we need.
        in particular, tests fail without the improved route match
        disambiguation introduced in 0.11.

0.09  2012-12-03
      - fix handling of multiple routes with equivalent paths (but different
        validations)

0.08  2012-11-16
      - allow declaring nested routers as mounts
      - $r->uri_for("string") now is a shortcut for
        $r->uri_for({name => "string"});
      - ControllerAction and HTTPMethod route builders now also set up a
        default 'name' for routes

0.07  2012-11-14
      - actually, disable middleware in roles for now, because it's not clear
        that it actually makes sense
      - add 'wrap_if' keyword for Plack::Middleware::Conditional support
        (relates to wrap in the same way that enable_if relates to enable in
        Plack::Builder)

0.06  2012-11-13
      - implement roles. using OX::Role will now let you declare partial
        routers in your roles which will be merged into the main router when
        you apply them to an OX class.
      - also clean up some bugs in router inheritance