@@ -2,6 +2,7 @@
 use strict;
 use warnings;
 use Test::More;
+use Test::Fatal;
 
 my $warnings;
 $SIG{__WARN__} = sub { $warnings .= $_[0] };
@@ -47,5 +48,22 @@ $warnings = '';
 }
 
 like($warnings, qr{^The application mounted at /bar will shadow the route declared at /bar/quux[^\n]*\nThe application mounted at /foo will shadow the route declared at /foo/bar[^\n]*\nThe application mounted at /foo will shadow the route declared at /foo/baz/quux[^\n]*\n$}, "got the right warning");
+
+{
+    package MyApp4;
+    use OX;
+
+    router as {
+        route '/foo' => sub { };
+    };
+    ::like(
+        ::exception {
+            router as {
+                route '/bar' => sub { };
+            };
+        },
+        qr/^Only one top level router is allowed/
+    );
+}
 
 done_testing;
